update readme, update ci / cd pipeline, create publishable npm package

--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "version": 2,
   "projects": {
     "canny-edge-detection": "apps/canny-edge-detection",
-    "canny-edge-detection-e2e": "apps/canny-edge-detection-e2e"
+    "canny-edge-detection-e2e": "apps/canny-edge-detection-e2e",
+    "sobel-edge-detection": "libs/sobel-edge-detection"
   }
 }
