--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nrwl/workspace": "13.9.3",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/sharp": "^0.30.0",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "cypress": "^9.1.0",
@@ -49,8 +50,14 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.1.1",
+    "ng-packagr": "^13.0.0",
     "nx": "13.9.3",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.5.1",
+    "sharp": "^0.30.3",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
