--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+		"affected:build": "nx affected:build",
+		"affected:test": "nx affected:test",
+		"affected:lint": "nx affected:lint"
   },
   "private": true,
   "dependencies": {
