--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,9 +2,9 @@ name: Musical Sniffle CI / CD
 
 on:
   push:
-    branches: [develop]
+    branches: [develop, main]
   pull_request:
-    branches: [develop]
+    branches: [develop, main]
   release:
     types:
       - created
